# statphys

./: .gitignore  Cargo.toml  DISTRIBUTING.md  README.md  flake.nix  run.nu
.github/workflows/: release.yml
exercises/exercise-1/: Kronberger_P1_1a.typ  Kronberger_P1_1b.typ  Kronberger_P1_2b.typ  Kronberger_P1_3b.typ  Kronberger_P1_4a.typ  Kronberger_P1_4b.typ  lib.typ
exercises/exercise-4/: Kronberger_P4_1_1a.typ  Kronberger_P4_1_1b.typ  Kronberger_P4_1_2a.typ  Kronberger_P4_1_2b.typ  Kronberger_P4_2a.typ  Kronberger_P4_2b.typ  P4_2a_energy_vs_average_rho0.05_T0.5.typ  P4_2a_energy_vs_average_rho0.05_T1.0.typ  P4_2a_energy_vs_average_rho0.3_T0.5.typ  P4_2a_energy_vs_average_rho0.3_T1.0.typ  P4_2b_rdf_rho0.05_T0.5.typ  P4_2b_rdf_rho0.05_T1.0.typ  P4_2b_rdf_rho0.3_T0.5.typ  P4_2b_rdf_rho0.3_T1.0.typ
exercises/exercise-5/: Kronberger_P5_1a.typ  (+8 more)
scripts/: build-dist.nu
src/: lib.rs
typst/: Kronberger_P1_1a.typ  Kronberger_P1_1b.typ  Kronberger_P1_2b.typ  Kronberger_P1_3b.typ  Kronberger_P1_4a.typ  Kronberger_P1_4b.typ  Kronberger_P4_1_1a.typ  Kronberger_P4_1_1b.typ  Kronberger_P4_1_2a.typ  Kronberger_P4_1_2b.typ  Kronberger_P4_2a.typ  Kronberger_P4_2b.typ  Kronberger_P5_1a.typ  Kronberger_P5_1b.typ  Kronberger_P5_1c.typ  Kronberger_P5_2a.typ  Kronberger_P5_3a.typ  Kronberger_P5_3b.typ  P4_2a_energy_vs_average_rho0.05_T0.5.typ  P4_2a_energy_vs_average_rho0.05_T1.0.typ  P4_2a_energy_vs_average_rho0.3_T0.5.typ  P4_2a_energy_vs_average_rho0.3_T1.0.typ  P4_2b_rdf_rho0.05_T0.5.typ  P4_2b_rdf_rho0.05_T1.0.typ  P4_2b_rdf_rho0.3_T0.5.typ  P4_2b_rdf_rho0.3_T1.0.typ
(+21 files in other folders)
