[package]
name = "statphys"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
rand_distr = "0.5"
ndarray = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.24", features = ["auto-initialize"] }
clap = { version = "4", features = ["derive"] }
