[package]
name = "statphys"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
rand_distr = "0.5"
rand_xoshiro = "0.7"
ndarray = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.24", features = ["auto-initialize"], optional = true }
clap = { version = "4", features = ["derive"] }
rustfft = "6"
num-traits = "0.2"
num-complex = "0.4"

[features]
default = ["python-backend"]
python-backend = ["dep:pyo3"]

[profile.release-dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
